# Marketpulse_main

./: package-lock.json  package.json
agentic_ai/: agents.py  chat.py  intents.json  intents.py  intents_2.py  main.py  planner.txt  pyproject.toml  stock_analysis_crew.py  tasks.py
agentic_ai/tools/: calculator_tools.py  search_tools.py  sec_tools.py  sec_tools_2.py
api/: index.js
client/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js
client/src/: App.jsx  api.js  firebase.js  index.css
client/src/components/: DashSidebar.jsx  Footer.jsx  Header.jsx  StockAnalysisDisplay.jsx  StockAnalyzer.jsx  StockPredictions.jsx  StockSentimentAnalyzer.jsx  Topbar.jsx
client/src/components/ui/: card.jsx
client/src/pages/: About.jsx  Analysis.jsx  Dashboard.jsx  Game.jsx  Home.jsx  News.jsx  SignIn.jsx  SignUp.jsx  StockAnalysis.jsx
client/src/pages/api/: finance.js
trend_analyser/: package-lock.json  package.json  server.js  test.js
